--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        room_version = '2.6.1'
+        lifecycle_version = '2.8.3'
+        hilt_version = '2.51.1'
+    }
+}
+
 plugins {
 id 'com.android.application' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id 'com.google.dagger.hilt.android' version '2.51.1' apply false
+    id 'androidx.room' version "$room_version" apply false
+    id("com.google.devtools.ksp") version "1.8.10-1.0.9" apply false
 }
