--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,11 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.11.0"
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
+    implementation "androidx.datastore:datastore-preferences:1.1.1"
 
-//    implementation 'com.google.dagger:hilt-android:2.51.1'
-//    annotationProcessor 'com.google.dagger:hilt-compiler:2.51.1'
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -84,11 +85,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-//    implementation "androidx.room:room-runtime:$room_version"
-//    annotationProcessor "androidx.room:room-compiler:$room_version"
-
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
