--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,10 +72,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation "androidx.datastore:datastore-preferences:1.1.1"
+    implementation "androidx.compose.material:material-icons-extended:1.6.8"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'junit:junit:4.12'
+
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
