--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation "androidx.datastore:datastore-preferences:1.1.1"
     implementation "androidx.compose.material:material-icons-extended:1.6.8"
+    implementation 'org.apache.commons:commons-text:1.12.0'
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
 
